added form to create new collections

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+
+
 	<!-- custom CSS here -->
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script data-main="js/main" src="js/libs/require/require.js"></script>
@@ -28,7 +30,10 @@
     </div>
   </div>
 </nav>
-	
+		<section  class="container-fluid">
+			<form id="create-gallery"class='form-inline'>
+				</form>
+	</section>
 	<section id = "content" class="continer-fluid">
 
 		<table  id ="gallery-table" class="table table-striped">
@@ -43,6 +48,8 @@
 	</div>
 
 	</section>
+
+
 
 </body>
 
